main.py добавлена конструкция input Добавдены заголовки вывода и pprint.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-.vscode
+/Users/nikita/edu_projects/homework_samples/01_what_is_python/.vscode
+/Users/nikita/edu_projects/homework_samples/01_what_is_python/alt_way/__pycache__
